--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Write your HTML in this file -->
 
   
-<a href="https://flatironschool.com"> Website.
+<a href="https://flatironschool.com"> Flatiron School
 </a>
